[gd_scene load_steps=10 format=3 uid="uid://dpswufreepa67"]

[ext_resource type="Texture2D" uid="uid://dcx05njwsiixq" path="res://assets/sprites/action_icons1.png" id="1_b5c1i"]
[ext_resource type="Script" path="res://scenes/player/player_hud.gd" id="1_hdqkj"]
[ext_resource type="Texture2D" uid="uid://b47w0244b3fq4" path="res://assets/sprites/action_icons3.png" id="1_qokn0"]
[ext_resource type="Texture2D" uid="uid://dh6nl4ila1rh1" path="res://assets/sprites/player-default.png" id="3_gm50e"]
[ext_resource type="Texture2D" uid="uid://t1sj0gqipki8" path="res://assets/sprites/action_icons2.png" id="5_g4llw"]
[ext_resource type="AudioStream" uid="uid://damvexp438gwf" path="res://assets/sounds/select1.ogg" id="6_4telq"]
[ext_resource type="Texture2D" uid="uid://dqbisq1u0ap4o" path="res://assets/sprites/hats/hat1.png" id="6_n3wd2"]
[ext_resource type="AudioStream" uid="uid://c4hel8s01gyu0" path="res://assets/sounds/select2.ogg" id="7_uoudm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hb1vw"]
bg_color = Color(0.137255, 0.137255, 0.137255, 0.478431)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
auto_translate = false
focus_mode = 1
mouse_filter = 1
script = ExtResource("1_hdqkj")

[node name="actions" type="HBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0.486275)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 0
alignment = 2

[node name="btn4" type="TextureButton" parent="actions"]
layout_mode = 2
texture_normal = ExtResource("1_qokn0")
stretch_mode = 5

[node name="btn3" type="TextureButton" parent="actions"]
layout_mode = 2
texture_normal = ExtResource("1_qokn0")
stretch_mode = 5

[node name="btn2" type="TextureButton" parent="actions"]
layout_mode = 2
texture_normal = ExtResource("5_g4llw")
stretch_mode = 5

[node name="btn1" type="TextureButton" parent="actions"]
layout_mode = 2
texture_normal = ExtResource("1_b5c1i")
stretch_mode = 5

[node name="gameinfo" type="PopupPanel" parent="."]
title = "Game Info"
initial_position = 2
size = Vector2i(800, 410)
transparent = true
theme_override_styles/panel = SubResource("StyleBoxFlat_hb1vw")

[node name="tabs" type="TabContainer" parent="gameinfo"]
offset_left = 3.0
offset_top = 3.0
offset_right = 797.0
offset_bottom = 407.0
focus_mode = 2
tab_alignment = 1

[node name="Player" type="HBoxContainer" parent="gameinfo/tabs"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="gameinfo/tabs/Player"]
layout_mode = 2

[node name="skinview" type="SubViewportContainer" parent="gameinfo/tabs/Player/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
stretch = true

[node name="viewport" type="SubViewport" parent="gameinfo/tabs/Player/HBoxContainer/skinview"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(200, 2)
render_target_update_mode = 0

[node name="Body" type="Sprite2D" parent="gameinfo/tabs/Player/HBoxContainer/skinview/viewport"]
texture_filter = 1
position = Vector2(100, 150)
texture = ExtResource("3_gm50e")
hframes = 9
vframes = 3

[node name="Eyes" type="Sprite2D" parent="gameinfo/tabs/Player/HBoxContainer/skinview/viewport"]
texture_filter = 1
position = Vector2(100, 150)
texture = ExtResource("3_gm50e")
hframes = 9
vframes = 3
frame = 9

[node name="Mouth" type="Sprite2D" parent="gameinfo/tabs/Player/HBoxContainer/skinview/viewport"]
texture_filter = 1
position = Vector2(100, 150)
texture = ExtResource("3_gm50e")
hframes = 9
vframes = 3
frame = 18

[node name="Hat" type="Sprite2D" parent="gameinfo/tabs/Player/HBoxContainer/skinview/viewport"]
position = Vector2(100, 150)
texture = ExtResource("6_n3wd2")

[node name="TabContainer" type="TabContainer" parent="gameinfo/tabs/Player"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Skin" type="ScrollContainer" parent="gameinfo/tabs/Player/TabContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="gameinfo/tabs/Player/TabContainer/Skin"]
layout_mode = 2
size_flags_horizontal = 3

[node name="skinbuiltin" type="VBoxContainer" parent="gameinfo/tabs/Player/TabContainer/Skin/VBoxContainer"]
layout_mode = 2

[node name="skins" type="GridContainer" parent="gameinfo/tabs/Player/TabContainer/Skin/VBoxContainer/skinbuiltin"]
layout_mode = 2
focus_next = NodePath("../../skincustom/skins")
columns = 5

[node name="skincustom" type="VBoxContainer" parent="gameinfo/tabs/Player/TabContainer/Skin/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="gameinfo/tabs/Player/TabContainer/Skin/VBoxContainer/skincustom"]
layout_mode = 2
text = "Custom:"
horizontal_alignment = 1

[node name="skins" type="GridContainer" parent="gameinfo/tabs/Player/TabContainer/Skin/VBoxContainer/skincustom"]
layout_mode = 2
focus_previous = NodePath("../../skinbuiltin/skins")
columns = 3

[node name="openskins" type="Button" parent="gameinfo/tabs/Player/TabContainer/Skin/VBoxContainer/skincustom"]
layout_mode = 2
text = "Open Skins Directory"
flat = true

[node name="Hats" type="ScrollContainer" parent="gameinfo/tabs/Player/TabContainer"]
visible = false
layout_mode = 2

[node name="hatlist" type="GridContainer" parent="gameinfo/tabs/Player/TabContainer/Hats"]
layout_mode = 2
columns = 3

[node name="Game" type="ScrollContainer" parent="gameinfo/tabs"]
visible = false
layout_mode = 2

[node name="btns" type="VBoxContainer" parent="gameinfo/tabs/Game"]
layout_mode = 2
size_flags_horizontal = 3

[node name="gamemode" type="HBoxContainer" parent="gameinfo/tabs/Game/btns"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="label" type="Label" parent="gameinfo/tabs/Game/btns/gamemode"]
layout_mode = 2
text = "Gamemode: "

[node name="option" type="OptionButton" parent="gameinfo/tabs/Game/btns/gamemode"]
layout_mode = 2
item_count = 2
selected = 0
fit_to_longest_item = false
popup/item_0/text = "Impostor"
popup/item_0/icon = ExtResource("5_g4llw")
popup/item_0/id = 0
popup/item_1/text = "Deathmatch"
popup/item_1/icon = ExtResource("1_qokn0")
popup/item_1/id = 1

[node name="bots" type="HBoxContainer" parent="gameinfo/tabs/Game/btns"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="label" type="Label" parent="gameinfo/tabs/Game/btns/bots"]
layout_mode = 2
text = "Bots: "

[node name="HSlider" type="SpinBox" parent="gameinfo/tabs/Game/btns/bots"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="custommap" type="HBoxContainer" parent="gameinfo/tabs/Game/btns"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="label" type="Label" parent="gameinfo/tabs/Game/btns/custommap"]
layout_mode = 2
text = "Custom Map: "

[node name="option" type="OptionButton" parent="gameinfo/tabs/Game/btns/custommap"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0

[node name="cmaplobby" type="Button" parent="gameinfo/tabs/Game/btns"]
layout_mode = 2
text = "Set Custom Map as Lobby"
flat = true

[node name="select" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_4telq")

[node name="select2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_uoudm")
